update Auth
